# aeterna

./: .gitignore  README.md  run_desktop_app.cmd  synthetic_data_generator.py  tmp_criteria.docx
.github/workflows/: windows-bundle.yml
app/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/binaries/: README.md
app/src-tauri/src/: backend.rs  lib.rs  main.rs  sidecar.rs  sidecar_models.rs  startup.rs
app/src-tauri/windows/: hooks.nsh
backend/: main.py  requirements-dev.txt  requirements.txt
backend/api/: router.py
config/: build_metadata.json  feature_flags.json  model_registry.json  system_settings.json
core/: __init__.py  build_backend.py  build_sidecar.py  runtime.py
core/sidecar/: Cargo.toml
core/sidecar/src/: activity.rs  bootcfg.rs  main.rs  ml.rs  models.rs  paths.rs  policy.rs  power.rs  presentmon.rs  processes.rs  registry.rs  services.rs  snapshots.rs  telemetry.rs  timer.rs
docs/: ACCEPTANCE_CHECKLIST.md  AETERNA_DOCTRINE.md  AETERNA_HUMAN_PRODUCT_TRANSFORMATION_AUDIT.md  ARCHITECTURE.md  HUMAN_DESIGN_NOTES.md  MASTER_BUILD_PROMPT.md  PREDEFENSE_TARGET_SPEC.md  PRODUCT_TRUTH.md  SAFE_OPERATION.md  SOURCE_CONTROL.md
installer/: build_windows.bat  dev_start.bat  install_test_check.ps1  write_build_metadata.py
ml/: autoencoder_detector.py  lightgbm_latency.py  pipeline.py  suspicious_classifier.py  synthetic.py  train_latency.py
tools/: generate_app_icon.py  synthetic_data_generator.py
(+61 files in other folders)
