[package]
name = "aeterna"
version = "1.0.0"
description = "Aeterna desktop shell"
authors = ["Codex"]
edition = "2021"

[lib]
name = "aeterna_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
