[package]
name = "aeterna-sidecar"
version = "1.0.0"
edition = "2021"

[dependencies]
csv = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
  "Win32_UI_WindowsAndMessaging",
] }
